# cdf-fabric-replicator

./: .env.example  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LAKEHOUSE_TO_KQL.md  LICENSE  README.md  SYNC_TO_KQL.md  config-petro-tech.yaml  config.yaml  docs_preamble.md  example_az_deploy.py  example_config.yaml  example_config_extractor.yaml  fabric_connector.spec  manifest.yml  mypy.ini  pyproject.toml  testing.md  win_service.spec
.github/: renovate.json
.github/workflows/: build.yml  codestyle.yaml  codestyle.yml  docker_hub_release.yaml  integration_tests.yaml  integration_tests.yml  release.yaml  release.yml  test.yaml
cdf-fab-rep/: Chart.yaml  values.yaml
cdf-fab-rep/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  secretprovider.yaml  service.yaml  serviceaccount.yaml
cdf-fab-rep/templates/tests/: test-connection.yaml
cdf-fabric-replicator-chart/: Chart.yaml  values.yaml
cdf-fabric-replicator-chart/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  secret.yaml
cdfFabricReplicator/: Chart.yaml  values.yaml
cdfFabricReplicator/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
cdfFabricReplicator/templates/tests/: test-connection.yaml
cdf_fabric_extractor/: __main__.py  config.py
cdf_fabric_replicator/: __main__.py  config.py  data_modeling.py  event.py  extractor.py  log_config.py  metrics.py  onelake_optimizer.py  raw.py  subscription.py  time_series.py  winservice.py
cdf_ts_replicator/: __main__.py  config.py  extractor.py  metrics.py
config_examples/: build_examples.sh  example_config.yaml
installer/: FabricConnectorSetup.wixproj  Product.wxs  build.ps1  setup-config.json
installer/Resources/: License.rtf
schema/: base_config.schema.json  cognite_config.schema.json  config.schema.json  data_modeling_config.schema.json  destination_config.schema.json  either_id.schema.json  event_config.schema.json  extractor_config.schema.json  logging_config.schema.json  raw_config.schema.json  raw_tables_config.schema.json  source_config.schema.json  state_store_config.schema.json  subscriptions_config.schema.json
tests/integration/: conftest.py  test_config.yaml  test_data_model_replicator.py  test_events_replicator.py  test_fabric_extractor.py  test_helm.py  test_integration.py  test_timeseries_replicator.py
tests/integration/integration_steps/: cdf_steps.py  data_model_generation.py  fabric_steps.py  service_steps.py  time_series_generation.py
tests/integration/resources/: movie_model.graphql
tests/unit/: conftest.py  test_data_modeling.py  test_event.py  test_extractor.py  test_raw.py  test_time_series.py
