[project]
authors = [
    {name = "Murad Saeter", email = "murad.sater@cognite.com"},
]
requires-python = "<3.13,>=3.10"
dependencies = [
    "cognite-sdk<8.0.0,>=7.26.0",
    "cognite-extractor-utils<8.0.0,>=7.0.0",
    "azure-identity<2.0.0,>=1.16.1",
    "azure-storage-file-datalake<13.0.0,>=12.14.0",
    "deltalake<1.0.0,>=0.16.0",
    "pandas<3.0.0,>=2.2.1",
    "pywin32>=308 ; sys_platform == 'win32'"
]
name = "cdf_fabric_replicator"
version = "0.3.3"
description = "Stream data from CDF to Fabric/Onelake"

[project.scripts]
cdf_fabric_replicator = "cdf_fabric_replicator.__main__:main"
[tool.black]
line-length = 120
target_version = ['py38']
include = '\.py$'

[tool.isort]
line_length=120                # corresponds to -w  flag
multi_line_output=3            # corresponds to -m  flag
include_trailing_comma=true    # corresponds to -tc flag
skip_glob = '^((?!py$).)*$'    # this makes sort all Python files
known_third_party = ["azure", "cognite", "prometheus_client"]

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.cogex.docker]
tags = ["cognite/cdf-fabric-replicator:{version}"]

[tool.coverage.run]
omit = [".*", "*/tests/*"]
[tool.coverage.report]
fail_under = 90

[tool.pytest.ini_options]
log_cli_level = "warning"
log_cli = true

[dependency-groups]
dev = [
    "coverage[toml]<8.0.0,>=7.4.4",
    "pytest<7.0.0,>=6.2.5",
    "pytest-mock<4.0.0,>=3.6.1",
    "pre-commit>=4.0.1",
    "mypy>=1.14.1",
    "pyinstaller>=6.11.1",
]
