[tool.poetry]
name = "cdf_fabric_replicator"
version = "0.3.3"
description = "Stream data from CDF to Fabric/Onelake"
authors = ["Murad Saeter <murad.sater@cognite.com>"]
readme = "README.md"
packages = [{ include = "cdf_fabric_replicator" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
cognite-sdk = ">=7.26.0,<8.0.0"
cognite-extractor-utils = ">=7.0.0,<8.0.0"
azure-identity = ">=1.16.1,<2.0.0"
azure-storage-file-datalake = ">=12.14.0,<13.0.0"
deltalake = ">=0.16.0,<1.0.0"
pandas = ">=2.2.1,<3.0.0"
pywin32 = { version = ">=308", markers = "sys_platform == 'win32'" }
boto3 = "^1.38.28"
pyarrow = "^20.0.0"

[tool.poetry.scripts]
cdf_fabric_replicator = "cdf_fabric_replicator.__main__:main"

[tool.poetry.group.dev.dependencies]
coverage = { version = ">=7.4.4,<8.0.0", extras = ["toml"] }
pytest = ">=7.2.0"
pytest-mock = ">=3.6.1,<4.0.0"
pre-commit = ">=4.0.1"
mypy = ">=1.14.1"
pyinstaller = ">=6.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py38"]
include = '\.py$'

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
skip_glob = '^((?!py$).)*$'
known_third_party = ["azure", "cognite", "prometheus_client"]

[tool.coverage.run]
omit = [".*", "*/tests/*"]

[tool.coverage.report]
fail_under = 90

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "warning"
